// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:anchorNav 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-PullRefresh"
    >
      <div
        class="cxd-PullRefresh-wrap"
        style="transform: translate3d(0, 0px, 0);"
      >
        <div
          class="cxd-PullRefresh-header"
        >
          
        </div>
        <div
          class="cxd-Page-content"
        >
          <div
            class="cxd-Page-main"
          >
            <div
              class="cxd-Page-body"
            >
              <div
                class="cxd-AnchorNav cxd-AnchorNav--vertical"
              >
                <ul
                  class="cxd-AnchorNav-link-wrap"
                  role="anchorlist"
                >
                  <li
                    class="cxd-AnchorNav-link is-active"
                  >
                    <a>
                      基本信息
                    </a>
                  </li>
                  <li
                    class="cxd-AnchorNav-link"
                  >
                    <a>
                      工作信息
                    </a>
                  </li>
                </ul>
                <div
                  class="cxd-AnchorNav-section-wrap"
                >
                  <div
                    class="cxd-AnchorNav-section"
                  >
                    <div
                      class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                      style="position: relative;"
                    >
                      <div
                        class="cxd-Panel-heading"
                      >
                        <h3
                          class="cxd-Panel-title"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              基本信息
                            </span>
                          </span>
                        </h3>
                      </div>
                      <div
                        class="cxd-Panel-body"
                      >
                        <form
                          class="cxd-Form cxd-Form--normal"
                          novalidate=""
                        >
                          <input
                            style="display: none;"
                            type="submit"
                          />
                          <div
                            class="cxd-Form-item cxd-Form-item--normal"
                            data-role="form-item"
                          >
                            <label
                              class="cxd-Form-label"
                            >
                              <span>
                                <span
                                  class="cxd-TplField"
                                >
                                  <span>
                                    姓名：
                                  </span>
                                </span>
                              </span>
                            </label>
                            <div
                              class="cxd-Form-control cxd-TextControl"
                            >
                              <div
                                class="cxd-TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  name="name"
                                  placeholder=""
                                  size="10"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            class="cxd-Form-item cxd-Form-item--normal"
                            data-role="form-item"
                          >
                            <label
                              class="cxd-Form-label"
                            >
                              <span>
                                <span
                                  class="cxd-TplField"
                                >
                                  <span>
                                    邮箱：
                                  </span>
                                </span>
                              </span>
                            </label>
                            <div
                              class="cxd-Form-control cxd-TextControl"
                            >
                              <div
                                class="cxd-TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  name="email"
                                  placeholder=""
                                  size="10"
                                  type="email"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </form>
                      </div>
                      <div
                        class="cxd-Panel-footerWrap"
                      >
                        <div
                          class="cxd-Panel-btnToolbar cxd-Panel-footer"
                        >
                          <button
                            class="cxd-Button cxd-Button--primary"
                            type="submit"
                          >
                            <span>
                              提交
                            </span>
                          </button>
                        </div>
                      </div>
                      <div
                        class="resize-sensor"
                        style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                      >
                        
  
                        <div
                          class="resize-sensor-expand"
                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                        >
                          
    
                          <div
                            style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                          />
                          
  
                        </div>
                        
  
                        <div
                          class="resize-sensor-shrink"
                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                        >
                          
    
                          <div
                            style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                          />
                          
  
                        </div>
                        
  
                        <div
                          class="resize-sensor-appear"
                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="cxd-AnchorNav-section"
                  >
                    <div
                      class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                      style="position: relative;"
                    >
                      <div
                        class="cxd-Panel-heading"
                      >
                        <h3
                          class="cxd-Panel-title"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              工作信息
                            </span>
                          </span>
                        </h3>
                      </div>
                      <div
                        class="cxd-Panel-body"
                      >
                        <form
                          class="cxd-Form cxd-Form--normal"
                          novalidate=""
                        >
                          <input
                            style="display: none;"
                            type="submit"
                          />
                          <div
                            class="cxd-Form-item cxd-Form-item--normal"
                            data-role="form-item"
                          >
                            <label
                              class="cxd-Form-label"
                            >
                              <span>
                                <span
                                  class="cxd-TplField"
                                >
                                  <span>
                                    公司名称：
                                  </span>
                                </span>
                              </span>
                            </label>
                            <div
                              class="cxd-Form-control cxd-TextControl"
                            >
                              <div
                                class="cxd-TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  name="cname"
                                  placeholder=""
                                  size="10"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            class="cxd-Form-item cxd-Form-item--normal"
                            data-role="form-item"
                          >
                            <label
                              class="cxd-Form-label"
                            >
                              <span>
                                <span
                                  class="cxd-TplField"
                                >
                                  <span>
                                    公司地址：
                                  </span>
                                </span>
                              </span>
                            </label>
                            <div
                              class="cxd-Form-control cxd-TextControl"
                            >
                              <div
                                class="cxd-TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  name="caddress"
                                  placeholder=""
                                  size="10"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </form>
                      </div>
                      <div
                        class="cxd-Panel-footerWrap"
                      >
                        <div
                          class="cxd-Panel-btnToolbar cxd-Panel-footer"
                        >
                          <button
                            class="cxd-Button cxd-Button--primary"
                            type="submit"
                          >
                            <span>
                              提交
                            </span>
                          </button>
                        </div>
                      </div>
                      <div
                        class="resize-sensor"
                        style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                      >
                        
  
                        <div
                          class="resize-sensor-expand"
                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                        >
                          
    
                          <div
                            style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                          />
                          
  
                        </div>
                        
  
                        <div
                          class="resize-sensor-shrink"
                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                        >
                          
    
                          <div
                            style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                          />
                          
  
                        </div>
                        
  
                        <div
                          class="resize-sensor-appear"
                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:anchorNav horizontal 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-PullRefresh"
    >
      <div
        class="cxd-PullRefresh-wrap"
        style="transform: translate3d(0, 0px, 0);"
      >
        <div
          class="cxd-PullRefresh-header"
        >
          
        </div>
        <div
          class="cxd-Page-content"
        >
          <div
            class="cxd-Page-main"
          >
            <div
              class="cxd-Page-body"
            >
              <div
                class="cxd-AnchorNav cxd-AnchorNav--horizontal"
              >
                <ul
                  class="cxd-AnchorNav-link-wrap"
                  role="anchorlist"
                >
                  <li
                    class="cxd-AnchorNav-link is-active"
                  >
                    <a>
                      基本信息
                    </a>
                  </li>
                </ul>
                <div
                  class="cxd-AnchorNav-section-wrap"
                >
                  <div
                    class="cxd-AnchorNav-section"
                  >
                    <div
                      class="cxd-Panel cxd-Panel--default cxd-Panel--form"
                      style="position: relative;"
                    >
                      <div
                        class="cxd-Panel-heading"
                      >
                        <h3
                          class="cxd-Panel-title"
                        >
                          <span
                            class="cxd-TplField"
                          >
                            <span>
                              基本信息
                            </span>
                          </span>
                        </h3>
                      </div>
                      <div
                        class="cxd-Panel-body"
                      >
                        <form
                          class="cxd-Form cxd-Form--normal"
                          novalidate=""
                        >
                          <input
                            style="display: none;"
                            type="submit"
                          />
                          <div
                            class="cxd-Form-item cxd-Form-item--normal"
                            data-role="form-item"
                          >
                            <label
                              class="cxd-Form-label"
                            >
                              <span>
                                <span
                                  class="cxd-TplField"
                                >
                                  <span>
                                    姓名：
                                  </span>
                                </span>
                              </span>
                            </label>
                            <div
                              class="cxd-Form-control cxd-TextControl"
                            >
                              <div
                                class="cxd-TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  name="name"
                                  placeholder=""
                                  size="10"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            class="cxd-Form-item cxd-Form-item--normal"
                            data-role="form-item"
                          >
                            <label
                              class="cxd-Form-label"
                            >
                              <span>
                                <span
                                  class="cxd-TplField"
                                >
                                  <span>
                                    邮箱：
                                  </span>
                                </span>
                              </span>
                            </label>
                            <div
                              class="cxd-Form-control cxd-TextControl"
                            >
                              <div
                                class="cxd-TextControl-input"
                              >
                                <input
                                  autocomplete="off"
                                  name="email"
                                  placeholder=""
                                  size="10"
                                  type="email"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </form>
                      </div>
                      <div
                        class="cxd-Panel-footerWrap"
                      >
                        <div
                          class="cxd-Panel-btnToolbar cxd-Panel-footer"
                        >
                          <button
                            class="cxd-Button cxd-Button--primary"
                            type="submit"
                          >
                            <span>
                              提交
                            </span>
                          </button>
                        </div>
                      </div>
                      <div
                        class="resize-sensor"
                        style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                      >
                        
  
                        <div
                          class="resize-sensor-expand"
                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                        >
                          
    
                          <div
                            style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                          />
                          
  
                        </div>
                        
  
                        <div
                          class="resize-sensor-shrink"
                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                        >
                          
    
                          <div
                            style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                          />
                          
  
                        </div>
                        
  
                        <div
                          class="resize-sensor-appear"
                          style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
